# bimm-contracts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.run/: Fix.run.xml  Test.run.xml
crates/bimm-contracts/: Cargo.toml  README.md
crates/bimm-contracts-macros/: Cargo.toml
crates/bimm-contracts-macros/src/: lib.rs
crates/bimm-contracts/benches/: contracts.rs  math.rs
crates/bimm-contracts/src/: bindings.rs  contracts.rs  expressions.rs  lib.rs  math.rs  slot_map.rs
crates/bimm-contracts/src/slots/: mod.rs  slot_contracts.rs  slot_expressions.rs  slot_map.rs
crates/bimm-contracts/src/support/: mod.rs  tch.rs
