[package]
name = "bimm-contracts-macros"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
description = "shape_contract![] proc-macro for bimm-contracts"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features=["span-locations"] }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true, features = ["proc-macro"] }

